--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "reelo-backend",
   "version": "1.0.0",
-  "description": "",
+  "description": "Reelo Backend\r =============",
   "main": "index.js",
   "type": "module",
   "scripts": {
@@ -11,12 +11,15 @@
   "author": "sohil",
   "license": "ISC",
   "dependencies": {
+    "axios": "^1.6.2",
     "bcrypt": "^5.1.1",
     "body-parser": "^1.20.2",
+    "cohere-ai": "^7.4.1",
     "dotenv": "^16.3.1",
     "express": "^4.18.2",
     "jsonwebtoken": "^9.0.2",
     "mongoose": "^8.0.1",
-    "nodemon": "^3.0.1"
+    "nodemon": "^3.0.1",
+    "pdfkit": "^0.14.0"
   }
 }
